--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
 body{
-  background: black;
+  background: rgb(37, 36, 36);
+}
+
+#tasklist::-webkit-scrollbar{
+  display: none;
 }
